Update somne new files.

--- a/2-技术与商业案例/8-亚马逊领导力准则.md
+++ b/2-技术与商业案例/8-亚马逊领导力准则.md
@@ -62,6 +62,119 @@
 
 
 
+# 亚马逊领导力准则之决策正确
+
+用亚马逊创始人贝佐斯自己的话形容，亚马逊领导力准则是这家公司取得如此辉煌成就的基石。认真学习这些领导力准则，不但有助于理解亚马逊的企业文化，也可以帮助我们分析亚马逊如何取得了这样举世瞩目的成就。
+
+今天我要说的一条亚马逊领导力准则是“决策正确”，其中文官网解释为：
+
+> 领导者在大多数情况下都能做出正确的决定。他们拥有卓越的业务判断能力和敏锐的直觉。他们寻求多样的视角，并挑战自己的观念。
+
+这条领导力准则并不像它看上去那样浅显易懂。如果仅仅关注字面意思，你很容易陷入一种茫然不解的境地。
+
+这种情况并非你我独有。在亚马逊里面，对于这条领导力准则同样感到困惑的大有人在。不过，亚马逊创始人贝佐斯在很多场合，都从不同角度解释过这条领导力准则。今天，我就来和你聊一聊他对这条准则的多重解释。
+
+首先来看第一句话：“领导者在大多数情况下都能做出正确的决定。”从字面上来看，这比较容易理解。也就是说，在亚马逊里面，犯错误是可以的，但是如果一个人犯错误的比例高于正确决定的比例，那肯定是不被允许的。
+
+在贝佐斯的观点里看来，一个领导者首先是一个人，因此不可避免地要犯一些错误。但是，一个领导者必须具备卓越的判断能力和敏锐的直觉，这样才能保证在大部分情况下都做出正确的决策。反之，如果一个人无法在大部分情况下保证决策正确，他就不符合亚马逊的领导力准则。
+
+**因此，能够做出正确的决策，是一个领导者必备的素质**。亚马逊不会允许它的雇员常常犯错。犯错多了，考核自然不会好。考核不好的话，轻则奖金飞了，重则需要自谋出路。这就对一个领导者提出了较高的要求。
+
+人非圣贤，不可能不犯错，但是亚马逊又要求领导者在大部分情况下都能做出正确的决定。那么，**一个人如何才能够保证在大部分情况下做出正确的决定呢？这就是领导力准则的第二部分，也是对第一部分这个问题的回答：寻求多样的视角，并挑战自己的观念。**
+
+贝佐斯自己解释过他的见解。一个在大部分情况下可以做出正确决定的人，往往经常性地改变自己的想法。**一个不善变的人，不一定是好的领导者**。很多领导者都会呈现出这样一种状态：今天有这样的想法，明天却有一个和今天截然不同的想法。这种状态看起来很不合理，但是实际上不但是健康的，而且是值得鼓励的。
+
+贝佐斯在自己和他人的交往过程中发现，**最聪明的人都经常修正自己对事物的理解和决策**。哪怕是一个已经考虑过的问题，他们也会拿出来重新思考。这样的人往往能够很好地接纳新的观点、新的信息、新的想法。哪怕这些想法和他们自己现有的认知是抵触的、矛盾的，他们依然会去接纳、思考和吸收。
+
+然而需要注意的是，贝佐斯也强调，这并不意味着这个人不需要有自己的观点，或者说不需要让自己的观点足够完善。实际上，贝佐斯要求每个领导者在每次做决策的时候都经过深思熟虑。领导者应该基于现有的信息，谨慎地做出决策，因为这种深思熟虑本身，就是保证决策正确的基础。
+
+**如果决策以后就一成不变了，往往会出问题**。所以，任何一个人，哪怕有了完善的观点，也应该把这种观点当作一个临时的，或者是一段时期内的，而不是永久的观点。因为新的信息会进来，情况会变，看问题可能会有新的角度与高度。哪怕领导者在一件事情上已经非常有经验，并且做得非常好，一旦他固化了思维，在新的条件下仍会产生错误的决定。
+
+因此，**如果一个领导者可以做到在大多数情况下都做出正确的决策，那么他必然不会拘泥于细节和自己熟悉的范围。**
+
+这个领导者需要审时度势，经常性地反思自己已经做出的决定和形成的观点；他还需要有随时随地接受新观点、新事物、新信息，乃至从新的角度去看待问题的能力；而且，在每个特定的时刻，他都需要基于现有的信息，经过深思熟虑来做出决策。只有这样，一个领导者才有可能在长期的、持续的决策过程中，在大部分情况下都做出正确的决策。
+
+贝佐斯的观点有很多值得我们学习和深思的地方。从目的出发，一个人如果能够在大部分情况下都做出正确的决策，或者在当前已知条件下做出最好的决策，这个人确实很了不起。而一个公司如果是由这样的人组成的，也必然可以取得令人刮目相看的成就。这一点看起来非常有道理。
+
+但是我觉得这只是目的，**这条领导力准则精辟的地方在于，它还告诉了我们如何达到这个目的。**
+
+如何达到这个目的，需要一分为二地看：
+
+- 首先，每次做决策的时候，一个领导者需要形成一个经过深思熟虑的观点，这个观点可以被自己所掌握的东西有效地支持；
+- 其次，一个领导者又需要能够跳出自己已经形成的观点，随时吸纳新的东西。
+
+前者保证了每次决策都不是轻易做出的，每个决定都是深思熟虑的结果。后者又保证在下一次做决策时，他的信息得以更新，因而不会陷于自己已经形成的窠臼。
+
+第一次看到这条领导力准则时，我感觉一头雾水，因为它真的非常不好理解。但是当我看到贝佐斯向他的团队进行的解释时，颇有一种恍然大悟的感觉。不得不说，任何一个人，如果既能够做到在决策时认真思考、慎重考虑，又可以保持开放的心态，随时随地更新自己的见地和信息，那么我真的很难想象他做出来的决定会错很多、经常错。
+
+亚马逊出来的高管写过很多文章，其中或多或少都探讨过这条领导力准则。有些人把它放大到亚马逊这家公司的决策上来看，用来解释为什么亚马逊有很多明显不同于其他公司的地方。
+
+举例来说，亚马逊作为一家公司，推出来的产品和服务失败的案例屈指可数。目前为止，大家熟知的只有一个 Fire Phone。和其他公司比起来，这是亚马逊的一个显著优势。比如，谷歌推出并高调宣传的产品，失败的比例就相对高很多；微软的表现同样如此。
+
+我们还可以举其他很多公司的例子，但恐怕在美国，的确很难再找到第二家公司，其推出来的产品和服务的成功率如此之高了。
+
+**亚马逊推出来的产品和服务大部分都很成功，这在一定程度上就可以论证：亚马逊在大部分情况下都做出了正确的决策。**
+
+为什么亚马逊可以在大部分情况下做出正确的决策呢？很多在亚马逊待过的高管都认为，这条领导力准则在其中起到了非常重要的作用。
+
+因为亚马逊做决策的时候，一方面一定会非常慎重地基于已有信息，做出一个仔细思考过的决定，一方面又随时随地根据新信息来重新审视已经做出的决定。所以很多时候，一个产品或者服务尚未公开推向市场时，亚马逊已经在迭代的决策中，做出了最为符合市场预期的正确决策。
+
+我必须说，这看起来就像一个神话。可是仔细想想，又尽在情理之中。**我们要学习这条领导力准则，不但要理解其目的是尽量做出正确的决策，更需要明白：如何做才能达到这样的结果。**用亚马逊创始人贝佐斯自己的话形容，亚马逊领导力准则是这家公司取得如此辉煌成就的基石。认真学习这些领导力准则，不但有助于理解亚马逊的企业文化，也可以帮助我们分析亚马逊如何取得了这样举世瞩目的成就。
+
+今天我要说的一条亚马逊领导力准则是“决策正确”，其中文官网解释为：
+
+> 领导者在大多数情况下都能做出正确的决定。他们拥有卓越的业务判断能力和敏锐的直觉。他们寻求多样的视角，并挑战自己的观念。
+
+这条领导力准则并不像它看上去那样浅显易懂。如果仅仅关注字面意思，你很容易陷入一种茫然不解的境地。
+
+这种情况并非你我独有。在亚马逊里面，对于这条领导力准则同样感到困惑的大有人在。不过，亚马逊创始人贝佐斯在很多场合，都从不同角度解释过这条领导力准则。今天，我就来和你聊一聊他对这条准则的多重解释。
+
+首先来看第一句话：“领导者在大多数情况下都能做出正确的决定。”从字面上来看，这比较容易理解。也就是说，在亚马逊里面，犯错误是可以的，但是如果一个人犯错误的比例高于正确决定的比例，那肯定是不被允许的。
+
+在贝佐斯的观点里看来，一个领导者首先是一个人，因此不可避免地要犯一些错误。但是，一个领导者必须具备卓越的判断能力和敏锐的直觉，这样才能保证在大部分情况下都做出正确的决策。反之，如果一个人无法在大部分情况下保证决策正确，他就不符合亚马逊的领导力准则。
+
+**因此，能够做出正确的决策，是一个领导者必备的素质**。亚马逊不会允许它的雇员常常犯错。犯错多了，考核自然不会好。考核不好的话，轻则奖金飞了，重则需要自谋出路。这就对一个领导者提出了较高的要求。
+
+人非圣贤，不可能不犯错，但是亚马逊又要求领导者在大部分情况下都能做出正确的决定。那么，**一个人如何才能够保证在大部分情况下做出正确的决定呢？这就是领导力准则的第二部分，也是对第一部分这个问题的回答：寻求多样的视角，并挑战自己的观念。**
+
+贝佐斯自己解释过他的见解。一个在大部分情况下可以做出正确决定的人，往往经常性地改变自己的想法。**一个不善变的人，不一定是好的领导者**。很多领导者都会呈现出这样一种状态：今天有这样的想法，明天却有一个和今天截然不同的想法。这种状态看起来很不合理，但是实际上不但是健康的，而且是值得鼓励的。
+
+贝佐斯在自己和他人的交往过程中发现，**最聪明的人都经常修正自己对事物的理解和决策**。哪怕是一个已经考虑过的问题，他们也会拿出来重新思考。这样的人往往能够很好地接纳新的观点、新的信息、新的想法。哪怕这些想法和他们自己现有的认知是抵触的、矛盾的，他们依然会去接纳、思考和吸收。
+
+然而需要注意的是，贝佐斯也强调，这并不意味着这个人不需要有自己的观点，或者说不需要让自己的观点足够完善。实际上，贝佐斯要求每个领导者在每次做决策的时候都经过深思熟虑。领导者应该基于现有的信息，谨慎地做出决策，因为这种深思熟虑本身，就是保证决策正确的基础。
+
+**如果决策以后就一成不变了，往往会出问题**。所以，任何一个人，哪怕有了完善的观点，也应该把这种观点当作一个临时的，或者是一段时期内的，而不是永久的观点。因为新的信息会进来，情况会变，看问题可能会有新的角度与高度。哪怕领导者在一件事情上已经非常有经验，并且做得非常好，一旦他固化了思维，在新的条件下仍会产生错误的决定。
+
+因此，**如果一个领导者可以做到在大多数情况下都做出正确的决策，那么他必然不会拘泥于细节和自己熟悉的范围。**
+
+这个领导者需要审时度势，经常性地反思自己已经做出的决定和形成的观点；他还需要有随时随地接受新观点、新事物、新信息，乃至从新的角度去看待问题的能力；而且，在每个特定的时刻，他都需要基于现有的信息，经过深思熟虑来做出决策。只有这样，一个领导者才有可能在长期的、持续的决策过程中，在大部分情况下都做出正确的决策。
+
+贝佐斯的观点有很多值得我们学习和深思的地方。从目的出发，一个人如果能够在大部分情况下都做出正确的决策，或者在当前已知条件下做出最好的决策，这个人确实很了不起。而一个公司如果是由这样的人组成的，也必然可以取得令人刮目相看的成就。这一点看起来非常有道理。
+
+但是我觉得这只是目的，**这条领导力准则精辟的地方在于，它还告诉了我们如何达到这个目的。**
+
+如何达到这个目的，需要一分为二地看：
+
+- 首先，每次做决策的时候，一个领导者需要形成一个经过深思熟虑的观点，这个观点可以被自己所掌握的东西有效地支持；
+- 其次，一个领导者又需要能够跳出自己已经形成的观点，随时吸纳新的东西。
+
+前者保证了每次决策都不是轻易做出的，每个决定都是深思熟虑的结果。后者又保证在下一次做决策时，他的信息得以更新，因而不会陷于自己已经形成的窠臼。
+
+第一次看到这条领导力准则时，我感觉一头雾水，因为它真的非常不好理解。但是当我看到贝佐斯向他的团队进行的解释时，颇有一种恍然大悟的感觉。不得不说，任何一个人，如果既能够做到在决策时认真思考、慎重考虑，又可以保持开放的心态，随时随地更新自己的见地和信息，那么我真的很难想象他做出来的决定会错很多、经常错。
+
+亚马逊出来的高管写过很多文章，其中或多或少都探讨过这条领导力准则。有些人把它放大到亚马逊这家公司的决策上来看，用来解释为什么亚马逊有很多明显不同于其他公司的地方。
+
+举例来说，亚马逊作为一家公司，推出来的产品和服务失败的案例屈指可数。目前为止，大家熟知的只有一个 Fire Phone。和其他公司比起来，这是亚马逊的一个显著优势。比如，谷歌推出并高调宣传的产品，失败的比例就相对高很多；微软的表现同样如此。
+
+我们还可以举其他很多公司的例子，但恐怕在美国，的确很难再找到第二家公司，其推出来的产品和服务的成功率如此之高了。
+
+**亚马逊推出来的产品和服务大部分都很成功，这在一定程度上就可以论证：亚马逊在大部分情况下都做出了正确的决策。**
+
+为什么亚马逊可以在大部分情况下做出正确的决策呢？很多在亚马逊待过的高管都认为，这条领导力准则在其中起到了非常重要的作用。
+
+因为亚马逊做决策的时候，一方面一定会非常慎重地基于已有信息，做出一个仔细思考过的决定，一方面又随时随地根据新信息来重新审视已经做出的决定。所以很多时候，一个产品或者服务尚未公开推向市场时，亚马逊已经在迭代的决策中，做出了最为符合市场预期的正确决策。
+
+我必须说，这看起来就像一个神话。可是仔细想想，又尽在情理之中。**我们要学习这条领导力准则，不但要理解其目的是尽量做出正确的决策，更需要明白：如何做才能达到这样的结果。**
 
 
 
@@ -75,12 +188,62 @@
 
 
 
+# 亚马逊领导力准则之客户至尚
 
+用亚马逊创始人贝佐斯自己的话形容，亚马逊领导力准则是这家公司取得如此辉煌成就的基石。认真学习这些领导力准则，不但有助于理解亚马逊的企业文化，也可以帮助我们分析亚马逊如何取得了这样举世瞩目的成就。
 
+今天我要介绍的这条领导力准则是“客户至尚”，其官方解释是：
 
+> 领导者从客户入手，再反向推动工作。他们努力工作，赢得并维系客户对他们的信任。虽然领导者会关注竞争对手，但是他们更关注客户 。
 
+“客户至尚”是亚马逊最为重要的行事原则。亚马逊的创始人贝佐斯曾在公开场合多次强调客户的重要性，并将其列为最基础的工作准则。换句话说，如果与其他准则相悖，则优先遵循“客户至尚”准则。
 
+为什么贝佐斯将这条准则视作第一准则？如果你也不太清楚，2017 年 7 月贝佐斯在给股东的年度公开信中再一次强调了“客户至尚”的重要性，或许你能从中一窥究竟。
 
+公开信里大体是这样说的:
+
+> 有很多方法可以成为做生意的核心。企业可以以竞争对手为核心，也可以以产品为核心。企业还可以聚焦于技术，或者以业务模式为核心等等。但在我看来，以客户为中心是最为有利的方式。
+
+> 为什么呢？以客户为中心的方法有很多优点。其中很大的一个优点是：客户总是非常不满足。即便他们说他们很满足，公司业务很好。客户总是想要更好的东西，甚至他们都没有意识到这一点。遵循着让客户满意的意图将驱使企业代表客户去发明和创造。没有客户曾经要求亚马逊创建 Prime 会员计划，然而我们发明了这项服务。最后确实证明客户是想要这个计划的。类似这样的例子，我可以列举很多。
+
+这封信里提到了亚马逊的 Prime 会员，这是一项定价 95 美元的年收费服务项目。这一项目的性价比很高，用户可以享受到包括免费隔日送达货物、免费视频等多项便利服务。
+
+该项目在初推之时，亚马逊内部并不是一片和谐，很多人都提出了反对意见。反对 Prime 会员计划有很多原因，其中比较重要的有两点。
+
+- 第一点是这个计划成本昂贵。亚马逊做这个生意，非但不能赚到钱，还可能赔进去很多钱。比如说隔日免费寄送这项服务，用户每年只要下 4 单，邮费就超过 95 美元了。如果用户购买较多，亚马逊就会赔本。
+- 第二点是这一项目需要收取年费，用户是否愿意为此买单，也是未知数。万一投入大量成本去开发，用户却不买账，那么会前功尽弃。
+
+贝佐斯在推行项目之初，问了团队一个问题：“如果你是客户，是否愿意掏钱去享受这种服务？” 如果回答是肯定的，那么哪怕亚马逊会为此付出许多代价，甚至不能短期获利，这项服务也值得推出。
+
+**急客户所需，想客户所想，才是“客户至尚”的基本体现。坚持这样的理念，客户便会越来越愿意在亚马逊上消费，最后的规模效应才会形成良性循环**。团队的回答当然是正面的，于是项目得以顺利推行。
+
+事后的发展印证了贝佐斯的想法。Prime 会员制度推行之后，亚马逊上的购物量迅速增加，亚马逊的会员们对两天内送达这一服务表现出极大的热情。因为制度的推出，亚马逊迅速战胜了 eBay 和沃尔玛这样的传统零售商。
+
+亚马逊固然没有从邮费上赚到钱，但其规模效应带来的收入却远远大于在邮费上的支出。这种规模效应的结果是：亚马逊的各方面都得到提升，客户对亚马逊的忠诚度也极大地提高了。
+
+贝佐斯多次引用这个故事，告诉员工，也告诉亚马逊的客户与投资人，“客户至尚”这一准则对于亚马逊到底意味着什么。
+
+贝佐斯表示，**在创新的时候，是不是真正以客户为中心，这一点至关重要。否则，所谓的发明创造必然会陷入对成本的计较和对利益的追逐，当这些成为创新的目的，客户也就不可能发自内心地满意了。**
+
+没有了客户支持的企业，即便短期内可以获得高利润，也不可能长久。换句话说，是不是真的对客户好，客户不是傻瓜，有鉴别能力的。
+
+在美国各行各业里，创新并非为客户服务的例子有很多，将赚钱作为第一企业要义的案例也不胜枚举。
+
+美国有一家非常有名的生物制药厂商吉利德科学公司（Gilead Sciences），以生产抗病毒药物著称，艾滋病的“鸡尾酒疗法”治疗药物就出自这里。这家厂商发明了一种可以彻底治愈丙型肝炎的药物，这在抗病毒技术上是一个极大的突破，在此之前，丙型肝炎最多也只能控制而不能被彻底治愈。
+
+然而，人们对于这家企业一直有顾虑，他们不知道到底要花多少钱才能获得治疗。因为在美国的制药业里，新药开出天价来，是非常常见的敛财方式。所以在这个药出来之前，就有人觉得定价会很高，比如高达 3 万美元。
+
+然而大家还是低估了这个数字。药价公布的时候，七万五千美元一个人的治疗费用，不但吓坏了“吃瓜群众”，也吓坏了媒体和保险公司。
+
+这种高价“敛财”的手段甚至惊动了美国国会议员调查其企业定价的合理性。一些第三世界的国家，比如印度，看到如此高昂的价格，干脆就不想搭理这家企业，自己开始仿制药物。
+
+最后的结果是，这家企业并没有获利很多，因为世界各地都在仿制这个药物。而且，很多得了丙肝却非特别严重的人，也不愿意花那么一大笔钱去治疗。我想，这就是一个非常典型的，不以客户为中心的例子。
+
+“以客户为中心”并非放之四海而皆准的真理，但是在贝佐斯的观念中却是如此。贝佐斯要求他的每位员工，无论何时都必须将这条领导力准则执行到实处。这造就了亚马逊“客户至尚”的服务理念：任何事情只要是对客户有利的，哪怕暂时牺牲企业的一些收益，也应该去做。
+
+外界对于亚马逊推崇的以客户为中心的这条准则并非没有争议，因为极端地以客户为中心，完全可能牺牲掉企业的全部利益。外界对其各种揣测，说到底拿不准的恰恰是这个度。
+
+我们经常可以看到各种各样的讨论，不能否认，这种讨论有它合理的一面。在我接触到的亚马逊内部人员中，也有人心存困惑。在他们实际的工作中，以客户为中心这一服务准则的具体界限十分难以判断。但是，相信贝佐斯自己心中是有界限的，只是这个界限，并不容易表达。因此，他人是否真正能够做到通晓“客户至尚”准则，就要看各自的悟性了。
 
 
 
